# packages-ng

./: .gitignore  README.md  db-init.sql  db-sample-data.sql  model.rst  notes.rst  packages-ng.cabal  readme.rst
db/: db-clear.sh  db-env.sh  db-init.sql  drop-and-create.sh  dump.sh  env.sh  readme.rst
db/migrations/: 0002-comments.sql  0003-rename-view.sql
doc/: ebuilds.rst  history.rst  sandbox-research.rst
parse-packages/src/PackagesNG/: ParsePackage.hs
src/: Atom.hs  Common.hs  CommonAlt.hs  Package.hs  ParsePackages.hs
src/PackagesNG/: ParsePackage.hs  Portage.hs
src/ParsePackages/: ParsePackages.hs
test/: HLint.hs
tests/: HLint.hs
