name:                packages-ng
version:             0.1.0.0
synopsis:            Next generation Gentoo package browser
-- description:
homepage:            https://github.com/vikraman/packages-ng
license:             GPL-2
license-file:        LICENSE
author:              gg7
maintainer:          git@gg7.io
-- copyright:
category:            Web
build-type:          Simple
extra-source-files:  readme.rst
cabal-version:       >=1.10

-- library
--   -- exposed-modules:
--   -- other-modules:
--   -- other-extensions:
--   build-depends:       base >=4.6 && <4.7, time
--   -- hs-source-dirs:
--   default-language:    Haskell2010

-- TODO: http://www.haskell.org/cabal/users-guide/developing-packages.html#configurations

executable png
  build-depends:       base >=4.6 && <4.7
                       , async >= 2.0.1.4
                       , attoparsec >= 0.10.4.0
                       , bytestring >= 0.10.0.2
                       , containers >= 0.5.0.0
                       , directory >= 1.2.0.1
                       , filemanip >= 0.3.6.2
                       , filepath >= 1.3.0.1
                       , time >= 1.4.0.1
  hs-source-dirs:      src/
  -- main-is:             Main.hs
  main-is:             ParsePackages.hs
  default-language:    Haskell2010
  ghc-options:         -O1 -Wall -fno-warn-unused-matches
