name:                  packages-ng
version:               0.1.0.0
synopsis:              Next generation Gentoo package browser
-- description:
homepage:              https://github.com/vikraman/packages-ng
license:               GPL-2
license-file:          LICENSE
author:                gg7 et al.
maintainer:            git@gg7.io
-- copyright:
category:              Web
tested-with:           GHC
build-type:            Simple
stability:             alpha
extra-source-files:    readme.rst
cabal-version:         >=1.20

library
  exposed-modules:     PackagesNG.Portage
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.6 && <4.7
                       , attoparsec >= 0.10.4.0
                       , bytestring >= 0.10.0.2
                       , containers >= 0.5.0.0
  hs-source-dirs:      src/
  default-language:    Haskell2010
  ghc-options:         -O1 -Wall -Werror -fwarn-tabs

executable parsePackages
  build-depends:       base >=4.6 && <4.7
                       , async >= 2.0.1.4
                       , attoparsec >= 0.10.4.0
                       , bytestring >= 0.10.0.2
                       , containers >= 0.5.0.0
                       , directory >= 1.2.0.1
                       , filemanip >= 0.3.6.2
                       , filepath >= 1.3.0.1
                       , time >= 1.4.0.1
                       , packages-ng
  hs-source-dirs:      parse-packages/src/
  main-is:             Main.hs
  other-modules:       PackagesNG.ParsePackage
  default-language:    Haskell2010
  ghc-options:         -O1 -Wall -Werror -fwarn-tabs

test-suite hlint
  build-depends:       base
                       , hlint >= 1.9.5
  default-language:    Haskell2010
  hs-source-dirs:      tests
  main-is:             HLint.hs
  type:                exitcode-stdio-1.0
